--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,16 @@
 {
     "workbench.colorTheme": "OM Theme (Night Owl Italic)",
     "workbench.iconTheme": "material-icon-theme",
+
+    "git.autofetch": true,
+
     "files.autoSave": "off",
     "[python]": {
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "ms-python.autopep8",
     },
+
+    "editor.formatOnSave": true,
 
     "explorer.compactFolders": false,
     "editor.wordWrap": "on",
